--- a/style.css
+++ b/style.css
@@ -224,10 +224,9 @@ a  {
 /* annimation avant rédirection */
 a .span-container {
   position: absolute;
-  left: 0;
+  left: 46%;
   right: 0;
   margin: auto;
-  text-align: center;
   display: none;
 }
 
