--- a/style.css
+++ b/style.css
@@ -6,62 +6,61 @@
 }
 
 .container {
-  max-width: 550px;
+  max-width: 35rem;
   margin: auto;
 }
 
 img {
-  width: 40px;
-  height: 40px;
-  padding: 5px;
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: 0.3125rem;
   border-radius: 50% 0;
 }
 
 .all-media {
   width: 100%;
   position: relative;
-  border: 3px solid rgba(0, 0, 0, 0.089);
+  border: 0.1875rem solid rgba(0, 0, 0, 0.089);
   border-top: 0;
 }
 
 .profile-container {
  width: 96%;
- margin: 10px auto 60px auto;
+ margin: .625rem auto 3.75rem auto;
  background-image: url('https://res.cloudinary.com/ddqfmqin7/image/upload/v1732382490/images_gqxrkl.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  background-color: #fff;
- height: 200px;
+ height: 12.5rem;
  position: relative;
- border-radius: 10px;
- box-shadow: 2px 2px 1cap 2px #00000047;
- padding: 10px;
+ border-radius: .625rem;
+ box-shadow: 0 1px 1cap #8a4b0347;
+ padding: .625rem;
 }
 
 .profile {
   position: absolute;
+  width: 100%;
   top: 0;
   left: 0;
-  right: 0;
   text-align: center;
-  margin: auto;
 }
 
 .profile img {
-  width: 140px;
-  height: 140px;
-  margin: 5px;
+  width:  8.75rem;
+  height:  8.75rem;
+  margin: 0.3125rem;
   border-radius: 50%;
 }
 
 .profile h2 {
-  font-size: 24px;
-  padding: 8px;
+  font-size: 1.5rem;
+  padding: .5rem;
   width: 60%;
   background-color: #fff;
   margin: auto;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.687);
 }
@@ -71,112 +70,52 @@ img {
   flex-direction: column;
   width: 90%;
   margin: auto;
-  gap: 20px;
-  padding-bottom: 20px;
+  gap: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.media a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  gap: 35%;
+  color: #ffffff;
+  font-size: 1.0625rem;
+  letter-spacing: 0.125rem;
+  border-radius: 1.5625rem;
+  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a1 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background-color: #29A9E1;
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a2 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background-color: black;
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a3 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background-color: #1877F2;
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a4 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background: linear-gradient(45deg, #F58529, #FEDA77, #DD2A7B, #8134AF, #515BD4);
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a5 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background-color: #25D366;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  color: #fff;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a6 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background-color: #010101;
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a7 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background: linear-gradient(45deg, #FF0000, #FF4C00);
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 .media .a8 {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  gap: 35%;
   background-color: #0070ba;
-  color: #ffffff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  border-radius: 25px;
-  transition: transform 0.1s ease-in-out, box-shadow 0.2s ease-in-out;
 }
 
 /* meda hover */
@@ -232,12 +171,12 @@ a .span-container {
 
 .dot {
   display: inline-block;
-  width: 8px;
-  height: 8px;
+  width: .5rem;
+  height: .5rem;
   border-radius: 50%;
   background-color: #ffffff;
   animation: point-anim 1s infinite;
-  margin-right: 2px;
+  margin-right: 0.125rem;
 }
 
 @keyframes point-anim {
@@ -291,13 +230,13 @@ a .span-container {
 
 /* media de moins 480px */
 @media (max-width: 480px) {
-  .media .a1,
-  .media .a2,
-  .media .a3,
-  .media .a4,
-  .media .a5,
-  .media .a6,
-  .media .a7 {
+.media a {
       gap: 30%;
+  }
+}
+/* media de moins 350px */
+@media (max-width: 350px) {
+  .profile h2 {
+    font-size:  1.29375rem;
   }
 }
